--- a/Course-Assignment/Module-5/snippets/home-snippet.html
+++ b/Course-Assignment/Module-5/snippets/home-snippet.html
@@ -14,7 +14,7 @@
       <div class="col-md-4 col-sm-12 col-xs-12">
         <a href="https://goo.gl/maps/YCSEkovUsjXGZQAb9">
           <div id="map-tile">
-   <iframe src="https://www.google.com/maps/embed?pb=!1m19!1m8!1m3!1d445.42362258218196!2d83.43370464787336!3d26.731960485710044!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x39915ca5c1d5094b%3A0xe1acd92e02f068b4!2sCafeteria%20%2CMMMUT%20GKP%20PCJM%2BRFG%20Singhariya%2C%20Kunraghat%20Gorakhpur%2C%20Uttar%20Pradesh%20273202!3m2!1d26.7320697!2d83.4337001!5e0!3m2!1sen!2sin!4v1631463055527!5m2!1sen!2sin" width="720" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3563.385553970069!2d83.43150705028108!3d26.732069883123323!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39915ca5c1d5094b%3A0xe1acd92e02f068b4!2sCafeteria%20%2CMMMUT%20GKP!5e0!3m2!1sen!2sin!4v1631464649717!5m2!1sen!2sin" width="720" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             <span>map</span>
           </div>
         </a>
