--- a/Course-Assignment/Module-5/index.html
+++ b/Course-Assignment/Module-5/index.html
@@ -78,16 +78,16 @@
       <div class="row">
         <section id="hours" class="col-sm-4">
           <span>Hours:</span><br>
-          Sun-Thurs: 11:15am - 10:00pm<br>
-          Fri: 11:15am - 2:30pm<br>
-          Saturday Closed
+          Mon-Fri: 9:00am - 10:00pm<br>
+          Sat: 10:00am - 6:00pm<br>
+          Sunday Closed
           <hr class="visible-xs">
         </section>
         <section id="address" class="col-sm-4">
           <span>Address:</span><br>
-          7105 Reisterstown Road<br>
-          Baltimore, MD 21215
-          <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+          MMMUT University Cafeteria
+          Singhariya,Gorakhpur UP 273202
+          <p>* Delivery area within 3-4 km, with minimum order of Rs 50 plus RS 20 charge for all deliveries.</p>
           <hr class="visible-xs">
         </section>
         <section id="testimonials" class="col-sm-4">
